Making a spacing fix to gutters on content area

--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -344,6 +344,10 @@ textarea {
   .main-content-area {
     padding-top: 40px;
   }
+
+  .main-content-area .main-content-inner {
+    padding: 0 30px;
+  }
 }
 
 /* =Post styling
@@ -351,6 +355,11 @@ textarea {
 .content-area h1 {
     margin-top: 0;
 }
+
+.content-area li {
+  margin: 1.6em 0;
+}
+
 .entry-header > h1 {
   text-align: center;
 }
